neither selector access nor listeneres work

--- a/chapter06-project01.css
+++ b/chapter06-project01.css
@@ -9,9 +9,10 @@ body {
 }
 
 table {
-   border: collapse; 
+/*   border: collapse; */
+   border-collapse: collapse;
    border-spacing: 0;   
-   width; 90%;
+   width: 90%;
    margin: 0 auto;
 }
 table tbody td{
