--- a/chapter06-project01.css
+++ b/chapter06-project01.css
@@ -40,8 +40,16 @@ form p {
    margin-top: 0.5em;
 }
 
-astyle {
-   background-color: #800000;
+.required { 
+   background-color: rgba(255, 255, 255, 0);
+}
+
+.blue {
+   background-color: #0000B0;
+}
+
+.red p, .rectangle {
+   background-color: #B00000;
 }
 
 .box {
@@ -54,6 +62,7 @@ astyle {
    background-color: #EBF4FB;
    padding: 0.5em;
 }
+
 .centered {
    text-align: center;
 }
