--- a/chapter06-project01.1.css
+++ b/chapter06-project01.1.css
@@ -9,7 +9,8 @@ body {
 }
 
 table {
-   border-collapse: collapse; 
+/*   border: collapse; */
+   border-collapse: collapse;
    border-spacing: 0;   
    width: 90%;
    margin: 0 auto;
@@ -39,6 +40,18 @@ form p {
    margin-top: 0.5em;
 }
 
+.required { 
+   background-color: rgba(255, 255, 255, 0);
+}
+
+.blue {
+   background-color: #0000B0;
+}
+
+.red p, .rectangle {
+   background-color: #B00000;
+}
+
 .box {
    border: 1pt solid #95BEF0;
    padding: 0.5em;
@@ -49,6 +62,7 @@ form p {
    background-color: #EBF4FB;
    padding: 0.5em;
 }
+
 .centered {
    text-align: center;
 }
@@ -69,15 +83,4 @@ form p {
 .rounded:hover {
    background-color: #7f8dad;
 }
-
-/* set background of required to transparent so parent background shows through */
-.required {
-   background-color: rgba(255, 255, 255, 0);
-}
-
-.red {
-   background-color: rgba(255, 255, 255, 0);
-   background-color: #B00000;
-}
-
 
